--- a/day18/src/main/resources/static/index.html
+++ b/day18/src/main/resources/static/index.html
@@ -7,6 +7,11 @@
 	</head>
 	<body>
 		<h1>Weather forecast</h1>
+
+		<form method="GET" action="/weather">
+			<input type="text" name="city" size="30" placeholder="City name">
+			<button type="submit">Get</button>
+		</form>
 		
 	</body>
 </html>
