--- a/day18/src/main/resources/static/index.html
+++ b/day18/src/main/resources/static/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
+		<title>YATA</title>
+		<link rel="manifest" href="/manifest.json">
+		<script src="/reg_sw.js"></script>
 	</head>
 	<body>
 		<h1>Weather forecast</h1>
